# PeerCV

./: .gitignore  README.md
.github/workflows/: ping.yml
backend/: frontend.py  pyproject.toml
backend/app/: app.py  images.py  main.py
backend/app/routes/: comment_route.py  post_route.py
backend/auth/: users.py
backend/data/: app_db  db.py  schemas.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/app/: auth.js  globals.css  layout.jsx  page.jsx
frontend/app/components/: CommentSection.jsx  FeatureGrid.jsx  Leaderboard.jsx  Navbar.jsx  PageTransition.jsx  PostCard.jsx  ReviewModal.jsx  VotingQueue.jsx
frontend/app/feed/: page.jsx
frontend/app/leaderboard/: page.jsx
frontend/app/login/: page.jsx
frontend/app/profile/: page.jsx
frontend/app/queue/: page.jsx
frontend/app/upload/: page.jsx
frontend/src/: App.css
